--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=media-recommender
+server.port=8081
+
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/media_recommender?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
@@ -10,10 +12,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # App properties
-app.jwtSecret=JWTSuperSecretKey
-app.jwtExpirationMs=86400000
-
-# JWT
 app.jwtSecret=JWTSuperSecretKey
 app.jwtExpirationMs=86400000
 
