Ultima configuracion Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.application.name=media-recommender
+# Puerto del servidor
 server.port=8081
+
+# Configuración Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
+# Spring Security (opcional)
+spring.security.filter.dispatcher-types=REQUEST,ASYNC,ERROR
 
 # Database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/media_recommender?useSSL=false&serverTimezone=UTC
@@ -24,9 +35,3 @@ spring.security.user.name=admin
 spring.security.user.password=admin
 spring.security.user.roles=ADMIN
 
-# Thymeleaf
-spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
-spring.thymeleaf.mode=HTML
-spring.thymeleaf.encoding=UTF-8
