--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,7 @@ app.jwtExpirationMs=86400000
 spring.sql.init.mode=always
 spring.sql.init.encoding=UTF-8
 
-# Spring Security
-spring.security.user.name=admin
-spring.security.user.password=admin
-spring.security.user.roles=ADMIN
-
+# COMENTAR ESTAS LÍNEAS - Interfieren con tu configuración personalizada
+# spring.security.user.name=admin
+# spring.security.user.password=admin
+# spring.security.user.roles=ADMIN
